[tool.poetry]
name = "zanj"
version = "0.3.1"
description = "save and load complex objects to disk without pickling"
license = "GPL-3.0-only"
authors = ["mivanit <mivanits@umich.edu>"]
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
repository = "https://github.com/mivanit/ZANJ"

[tool.poetry.dependencies]
python = "^3.8"
muutils = {version = "^0.6.1", extras = ["array"]}
pandas = {version = ">=1.5.3", optional = true}
numpy = [
    { version = "^1.24.4", optional = true, markers = "python_version < '3.9'" },
    { version = "^1.26.4", optional = true, markers = "python_version >= '3.9'" },
]

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.1"
ipykernel = "^6.23.2"

[tool.poetry.group.lint.dependencies]
pycln = "^2.1.3"
ruff = "^0.4.8"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.mypy]
show_error_codes = true
